k8s-sandbox/ingress/ingress/ingress-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      hostname: "*.dhlabs.org"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: dhlabs-wildcard
            namespace: ingress
      allowedRoutes:
        namespaces:
          from: All
    - name: unifi-communication
      port: 8080
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: All
    - name: unifi-stun
      port: 3478
      protocol: UDP
      allowedRoutes:
        namespaces:
          from: All
    - name: unifi-discovery
      port: 10003
      protocol: UDP
      allowedRoutes:
        namespaces:
          from: All
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: '*.dhlabs.org, dhlabs.org'
      external-dns.alpha.kubernetes.io/ttl: "60"
