k8s-sandbox/ingress/ingress/authentik-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: ingress
  hostnames:
    - "authentik.dhlabs.org"
  rules:
    - backendRefs:
        - kind: Service
          name: authentik-server
          port: 80
          namespace: authentik
