k8s-sandbox/ingress/ingress/harbor-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: ingress
  hostnames:
    - "harbor.dhlabs.org"
  rules:
    - backendRefs:
        - kind: Service
          name: harbor
          port: 80
          namespace: harbor
