k8s-sandbox/ingress/ingress/k8s-workshop-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s-workshop-backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: ingress
  hostnames:
    - "workshop.dhlabs.org"
  rules:
    - backendRefs:
        - kind: Service
          name: k8s-workshop
          port: 80
          namespace: k8s-workshop
