k8s-sandbox/ingress/ingress/keycloak-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: ingress
  hostnames:
    - "keycloak.dhlabs.org"
  rules:
    - backendRefs:
        - kind: Service
          name: keycloak
          port: 8080
          namespace: keycloak
