k8s-sandbox/ingress/ingress/kmcp-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kmcp-backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: ingress
  hostnames:
    - "kmcp.dhlabs.org"
  rules:
    - backendRefs:
        - kind: Service
          name: mcp-test
          port: 8080
          namespace: kmcp-system
