k8s-sandbox/ingress/ingress/minio-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: ingress
  hostnames:
    - "minio.dhlabs.org"
  rules:
    - backendRefs:
        - kind: Service
          name: minio-console
          port: 9001
          namespace: minio
