k8s-sandbox/ingress/ingress/n8n-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: ingress
  hostnames:
    - "n8n.dhlabs.org"
  rules:
    - backendRefs:
        - kind: Service
          name: n8n-oauth2-proxy
          port: 80
          namespace: n8n
