k8s-sandbox/ingress/ingress/open-webui-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui-backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: ingress
  hostnames:
    - "chat.dhlabs.org"
  rules:
    - backendRefs:
        - kind: Service
          name: open-webui
          port: 80
          namespace: open-webui
