k8s-sandbox/ingress/ingress/openclaw-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openclaw-backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: ingress
  hostnames:
    - "openclaw.dhlabs.org"
  rules:
    - backendRefs:
        - kind: Service
          name: openclaw-oauth2-proxy
          port: 80
          namespace: openclaw
