k8s-sandbox/ingress/ingress/unifi-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: ingress
  hostnames:
    - "unifi.dhlabs.org"
  rules:
    - backendRefs:
        - kind: Service
          name: unifi
          port: 8080
          namespace: unifi
