k8s-sandbox/ingress/ingress/unifi-tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: unifi-backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: ingress
      sectionName: unifi-tls
  hostnames:
    - unifi.dhlabs.org
  rules:
    - backendRefs:
        - kind: Service
          name: unifi-os-server-webui-svc
          port: 443
          namespace: unifi
